# grim_cereseigen_testing

Doc/: Lecture 15 - Structure from Motion - Vision_Spring2012.pptx
Linux/: CMakeLists.txt
Linux/Test01_HelloWorld_Auto/: CMakeLists.txt  helloworld.cpp
Linux/Test02_HelloWorld_Numeric/: CMakeLists.txt  helloworld.cpp
Linux/Test03_HelloWorld_Analytic/: CMakeLists.txt  helloworld.cpp
Linux/Test04_Powell/: CMakeLists.txt  powell.cpp
Linux/Test05_CurveFitting/: CMakeLists.txt  curvefitting.cpp
Linux/Test06_RobustCurveFitting/: CMakeLists.txt  curvefitting.cpp
Linux/Test07_BA/: CMakeLists.txt  ba.cpp
Project01/: Project01.vcxproj  Project01.vcxproj.filters  main.cpp
Project01/Debug/: Project01.ilk  Project01.pch  vc140.idb
Project01/Debug/Project01.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Project01.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Project01/ipch/PROJECT01-8860f83d/: PROJECT01-626b1f84.ipch
Windows/CeresTesting1/: HelloWorld.h  HelloWorld_analytic.h  Powell.h  Project01.sln  Project01.vcxproj  Project01.vcxproj.filters  curve_fitting.h  main.cpp
Windows/EigenTesting1/: Basics01.h  Basics02.h  Basics03.h  Basics04.h  Basics05.h  Basics06.h  Basics07.h  Geometry01.h  LinAlg01.h  LinAlg02.h  LinAlg03.h  LinAlg04.h  LinAlg05.h  LinAlg06.h  Project01.vcxproj  Project01.vcxproj.filters  main.cpp
Windows/EigenTesting1/Debug/: Project01.ilk  vc140.idb
Windows/Playground/Triangulation_3D_Test/: Geometry01.h  Project01.vcxproj  Project01.vcxproj.filters  TODO.txt  main.cpp
(+7 files in other folders)
